# rust_ws_template

./: Cargo.toml  README.md
mybinary/: Cargo.toml
mybinary/src/: main.rs
mylib1/: Cargo.toml
mylib1/src/: lib.rs
mylib2/: Cargo.toml
mylib2/src/: lib.rs
