[package]
name = "mybinary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mylib1 = {path = "../mylib1"}
mylib2 = {path = "../mylib2"}
rand = "0.8.3"
hello_macro = { path = "../hello_macro" }
hello_macro_derive = { path = "../hello_macro/hello_macro_derive" }
